--- a/index.css
+++ b/index.css
@@ -1,461 +1,277 @@
 *{
+    width: 100%;
     margin: 0;
     padding: 0;
-    font-family: roboto;
-    color: rgb(29, 28, 28);
-    overflow-x: hidden;
-}  
-/* Variables dm==day mode nm== nightmode */
+    height: auto;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
-:root {
-    /* --main-dm: rgb(255, 0, 0); */
-    --main-dm: rgb(113, 138, 190);
-    --main-dim-dm:rgb(52, 81, 158);
-    /* --main-dim-dm:rgb(209, 0, 0); */
-    --main-color-dm:rgb(0, 25, 78);
-    --main-background-text:rgb(255, 246, 246);
-    --main-background:rgb(248, 239, 222);
-    --main-color-background:rgb(241, 241, 241);
+}
 
-    --main-nm: rgb(51, 51, 92);
-    --main-color-nm:rgb(245, 238, 238);
-  }
-
-.wrapper{
-  
-    display: grid;
-    grid-template-columns: repeat(12, [col-start] 8vw);
-    grid-template-rows: repeat(12, [col-start] 8vh);
-    gap: 10px;
-    background:var(--main-background);
+body{
+    background-color: rgb(235, 235, 235);
+    display: flex;
     width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-   
+    flex-direction: column;
+    gap: 2vh;
+
+    min-height: 100vh;
 }
 
-/* Top bar */
-.container{
-   grid-row: 1/2;
-   grid-column: 1/12;
-   display: flex;
-   flex-direction: row;
-   justify-content:space-between;
-   align-items: center;
-   
-   width: 100vw;
-   height: 10vh;
-   gap: 10px;
-   background:linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(7,6,97,1) 25%, rgba(8,7,104,1) 28%, rgba(9,9,121,1) 44%, rgba(6,81,168,1) 58%, rgba(5,106,185,1) 66%, rgba(3,153,216,1) 81%, rgba(1,190,241,1) 93%, var(--main-background) 100%);
-   border-bottom: 6px solid rgba(0, 0, 255, 0.178);
-   box-shadow: 0px 1px 10px rgb(167, 167, 167);
-}
-.links{
+.header{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    
-    gap: 20px;
-    margin-right: 10vw;
-    
-}
-.link{
-    font-size: 35px;
-    width: 5vw;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    
-}
-.link:hover{
-    font-size: 42px;
-    box-shadow: 0px 3px 3px whitesmoke;
-    
-}
-i{  margin-bottom: 1vh;
-    color: antiquewhite;
-}
-.links-sm{
-    display: none;
-}
-.button{
-    display: none;
-}
-.title{ 
-    color: var(--main-color-background);
-   margin-left:10vw;
-   font-size: 35px;
-   /* font-family:Header; */
-}
-
-
-/* Aside */
-.specialities{
-    margin-top: 2vh;
-   grid-row: 2/10;
-   grid-column: 1/3;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   gap: 10px;
-  width: 15vw;
-  height: 40vh;
-  background: var(--main-background-text);
-  box-shadow: 0px 1px 10px rgb(167, 167, 167);
-  border-radius: 10px 30px 10px 10px;
-  margin-left: 1.5vw;
-  border-right: 10px solid var(--main-dm);
-  border-top: 10px solid var(--main-dm);
-}
-
-.list{
-    margin-top: 1vh;
-    margin-left: 2vw;
-}
-.title-1{
-    margin-top: 2vh;
-}
-.contact-info{
-    margin-top: 6vh;
-    grid-row: 6;
-    grid-column:1/2 ;
-    width:15vw;
-    height: 7vh;
-    margin-left: 1.4vw;
-    display: flex;
+    width: 100%;
+    height: 35rem;
     justify-content: flex-start;
-    flex-direction: column;
-    gap: 10px;
-    background: var(--main-background-text);
-    border-radius: 0px 30px 10px 10px; 
-    
-    box-shadow: 0px 1px 10px rgb(167, 167, 167);
-}
-#info{
-    margin-top: 7px;
-    font-size: 30px;
-    color: inherit;
-    overflow-y: hidden;
-    
-}
-.contact{
-    /* border-radius: 0px 14px 0px 0px; */
-    border-radius: 0px 30px 10px 10px; 
-    background: var(--main-dim-dm);
-    border: 1px solid rgb(161, 210, 255);
-    display: flex; flex-direction: row;
-    justify-content: center;
     align-items: center;
-    gap: 0.5vw;
-    outline: none;
-    height: 7vh;
-    width: inherit;
-    color: whitesmoke;
-}
-.contact:hover{
-    background: rgb(161, 210, 255);
-    color: rgb(30, 98, 175);
-    border: 1px solid rgb(161, 210, 255);
-}
 
-
-
-/* name profile pic and educational achievements */
-.description{
-    margin-top: 1vw;
-    grid-row: 2/10;
-    grid-column: 3/11;
-    width: 80.5vw;
-    height: 80vh;
-    background: var(--main-background-text);
-    border-radius: 10px 20px 10px 10px;
-    border-right: 10px solid var(--main-dm);
-    box-shadow: 0px 1px 10px rgb(167, 167, 167);
-    display: flex;
     flex-direction: column;
-    align-items: center;
+    background: whitesmoke;
 }
-.card{
-    width: 100%;
-    background: var(--main-dim-dm);
-    height: fit-content ;
+.header-first-row{
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: 14rem;
+    gap: 1vw;
     align-items: center;
-    gap:10px;
-    border-radius: 100px 12px 0px 0px;
-    border-bottom: 6px solid rgb(233, 168, 71);
 }
-.name{
-    color: var(--main-color-background);
-    align-self: center;
-    margin-left: 5vw;
-    font-size: 45px;
-    
+.pfp{
+    margin-left: 2vw;
+    width: 30vw;
+    height: 30vh;
+   
+    border-radius: 100px 100px 100px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(34, 34, 41);
+  
 }
 .information{
-    gap: 10px;
-    margin-left: 2vw;
-
+    display: flex ;
+    flex-direction: column;
+    font-size: 50px;
 }
-.item-information{
-    text-decoration: underline;
-    font-size: 18px;
+.first-name{
     width: fit-content;
-    margin-bottom: 2vh;
-   
-}
-
-h3{
-    color:rgb(255, 123, 0);
-}
-.profile-pic{
     margin-left: 2vw;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    max-width: 10vw;
-    border: 2px solid black;
-    border-radius: 50% 50% 50% 25%;
-    background: darkslategray;
-    
+    border-bottom: 2px solid blue;
 }
-.profile-pic:hover{
-    border-radius: 50% 50% 50% 50%;
-    border: 3px solid whitesmoke;
-    box-shadow: 0px 1px 10px rgb(117, 110, 110);
-}
-
-.description1{
-    width: 90%;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-   
-}
-
-/* Footer */
-.footer{
-    grid-row: 11;
-    grid-column: 1/12;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(7,6,97,1) 25%, rgba(8,7,104,1) 28%, rgba(9,9,121,1) 44%, rgba(6,81,168,1) 58%, rgba(5,106,185,1) 66%, rgba(3,153,216,1) 81%, rgba(1,190,241,1) 93%, var(--main-background) 100%);
-    height: 15vh;
-    width: 100vw;
-    display: flex;
-    margin-top: 2.5vh;
-    flex-direction: row;
-    align-content: center;
-    justify-content: center;
-
-}
-.links-footer{
-    margin-top: 5vh;
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-.links-footer-sm{
-    display: none;
-    flex-direction: row;
-    color: whitesmoke;
-}
-.name-date{
-    position: absolute;
-    align-self: flex-end;
-    bottom: 1;
-    left: 0;
-    color: whitesmoke;
-    
-}
-
-@media only screen and (max-width: 840px) {
-    .wrapper {
-      display: flex;
-      align-items: center;
-      height: fit-content;
-      flex-direction: column;
-      font-size: 15px;
-      overflow-x: hidden;
-    }
-    .container{
-        justify-content: flex-start;
-        font-size: 20px;
-        
-       
-    }
-    .title{
-        display: none;
-        font-size: 20px;
-    }
-    .name{
-        font-size: 20px;
-        
-    }
-    .links{
-       display: none;
-    }
-    .link{
-        font-size: 25px;
-    }
-    .link:hover{
-        font-size:28px ;
-    }
-   
-   .button-sm{
-    margin-top: 2vh;
+.second-name{
+    width: fit-content;
     margin-left: 4vw;
-    color: whitesmoke;
-   }
-   .button-sm:hover{
-      height: fit-content;
-      font-size: 26px;
-   }
+    border-bottom: 3px solid blue;
+}
 
-   .links-sm{
-    display: flex;
-    position: absolute;
+.about{
+    display: flex ;
     flex-direction: column;
-    align-items: center;
-    height: 29vh;
-    margin-top: 39vh;
-    padding-bottom: 2vh;
-    padding-top: 2vh;
-    width: 100vw;
-    top: -100vh;
-    background: rgb(5, 5, 44);
-    color: whitesmoke;
-    box-shadow: 1px 3px 7px rgb(43, 41, 41);
-    
-   }
-   .animate{
-    
-    animation: slide 1s forwards;
-   }
-  
+    font-size: 30px;
+    border-bottom: 2px solid blue;
+}
 
-    @keyframes slide {
-       100% { top: -28.6vh; }
-    }
-
-   .link-sm{
+.header-second-row{
     display: flex;
+    width: 100%;
+    height: 6rem;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    font-size: 30px;
-    margin-top: 1vh;
-    margin-left: 4vw;
+    font-size: 20px;
+    gap:1vw;
+}
+.icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+    gap: 3vw;
+    height: 7rem;
+    font-size: 40px;
+   
+    background: rgb(98, 144, 231);
+    
+   
+}
+#icon{
+    width: fit-content;
+    text-decoration: none;
     color: whitesmoke;
-    border-bottom: px solid whitesmoke;
+}
+#icon:hover{
+    color: rgb(127, 187, 255);  
+}
+.contact-info{
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-start;
+ align-items: center;
+ width: 100%;
+ gap:1vh;
+ margin-left: 20px;
+}
 
-   }
-   .link-sm:hover{
-     background: var(--main-background-text);
-     color: black;
-     box-shadow: 1px 3px 7px rgb(247, 243, 243);
-   }
-   i{
-    color: inherit;
-   }
+.education{
+    width: 100%;
+    height: 30vh;
+    display:  flex;
+    flex-direction: column;
+    
+   
+    align-items: center;
+}
+
+.institution{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 25vh;
+    width: 100%;
+    margin-left: 2vw;
+
+}
 
 
-    .specialities{
-        width: 90vw;
-        align-self: flex-start;
-        justify-content: flex-start;
-        align-items: flex-start;
-    }
-    .description{
-        margin: 0;
-        width: 90vw;
-        height: fit-content;
-        align-self: flex-start;
-        justify-self: flex-start;
-    }
-    .button{
-        display: flex;
-        color: whitesmoke;
-        overflow-y: hidden;
-        
-    }
-     .contact{
-        width: inherit;
-        height: 8vh;
-        overflow-y: hidden;
-        gap: 15px;
-       
-     }
-    .contact-info{
-        display: flex;
-        flex-wrap: wrap;      
-        align-self: flex-start;
-        margin-left: 1vw;
-        width: 89vw;
-        margin-top: 1vh;
-        height:8vh;
-        overflow-y: hidden;
-        
-    }
-    .item-information{
+
+.specialization{
+    display: flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+    width: 100%;
+    min-height: 60vh;
+   
+    gap: 5vh;
+}
+.specialization-title{
+    margin-left: 2vw;
+}
+.card-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    height: fit-content;
+    width: 100%;
+    gap: 1vw;
+    margin-left: 2vw;
+}
+.card{
+    width: 12vw;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+   
+}
+.card:hover{
+    box-shadow: 0px 5px 5px white;
+}
+.card-expand{
+    width:90vw;
+    height: 25vh;
+   
+    z-index: 3;
+    display: flex;
+    flex-direction: row;
+    gap: 1vw;
+    justify-content: flex-start;
+    align-items: center;
+}
+.card-hidden{
+    display:none;
+}
+.more-info{
+    display: none;
+}
+.display{
+    display: flex;
+}
+.img-format{
+    width:12vw;
+    height: 20vh;
+    
+    
+}
+#profile-pic{
+    width:100%;
+    height: 20vh;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.style{
+    width: 100%;
+    height:4vh;
+    background: rgb(59, 105, 192);
+}
+.information1{
+    font-size: 20px;
+    margin-bottom: 5vh;
+    
+}
+.languages{
+    display: flex;
+    flex-direction: column;
+}
+@media (max-width:600px){
+   
+    .header{
         display: flex;
         width: 100%;
+        height: 130vh;
+        justify-content: flex-end;
+        align-items: center;
+        
+        flex-direction: column;
+        gap: 3vh;
         flex-wrap: wrap;
     }
-
-
-
-
-    .links-footer-sm{
+    .header-first-row{
         display: flex;
-        flex-direction: row;
-        color: whitesmoke;
-        
-        height: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-    .link-sm-f{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 15vw;
-        height: 100%;
-        font-size: 30px;
-        color: whitesmoke;
-
-    }
-    .link-sm-f:hover{
-        background: rgb(0, 26, 112);
-        box-shadow: 0px 6px 7px whitesmoke  ;
-        font-size: 32px;
-    }
-    .links-footer{
-        display: none;
-    }
-    .a{ margin-left: 1vw;
-        margin-top: 5px;
-        height: 100%;
-        display:  flex;
-        align-items:  center;
+        flex-direction: column;
         width: 100%;
-        color:inherit;
-        text-decoration: none;
-    }
-    .b{
-        color: whitesmoke;
-    }
-    .footer{
-        height: 25vh;
-    }
-    .name-date{
-        display: flex;
+        height: 10rem;
+        gap: 3vw;
         align-items: center;
-        height: 3vh;
-        width: 100vw;
-        background: rgb(19, 18, 18);
-        font-size: 12px;
+        justify-content: flex-end;
     }
-  }
+    .header-second-row{
+        display: flex;
+        width: 100%;
+        height: fit-content;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
+        font-size: 20px;
+        gap:2vw;
+    }
+    .information{
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       font-size: 40px;
+    }
+    .information1{
+       
+        font-size: 12px;
+        
+    }
+    .languages{
+        gap:10vw
+    }
+    .style{
+        justify-self: flex-start;
+        align-self: flex-start;
+        position:absolute;
+         box-shadow: 0px 5px 5px rgb(190, 190, 190);
+    }
+    #profile-pic{
+        width:100%;
+        height: 20vh;
+        object-fit: cover;
+        border-radius: 50%;
+        border: 6px solid rgb(114, 113, 113);
+        box-shadow: 0px 10px 5px rgb(190, 190, 190);
+    }
+}
